# calendars

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  Procfile  README.md  README_RECURRENCE.md  RECURRENCE_EXAMPLES.md  RECURRENCE_IMPLEMENTATION.md  RECURRENCE_SUMMARY.md  SCHEDULER_RECURRENCE_INTEGRATION.md  SECURITY.md  compose.yaml  renovate.json
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: calendars-frontend.yml  calendars.yml  crowdin_download.yml  crowdin_upload.yml  docker-hub.yml  front-dependencies-installation.yml
docker/auth/: realm.json
docker/davical/: Dockerfile  config.php  davical.conf  run-migrations
docker/files/docker-entrypoint-initdb.d/: init-databases.sh
docker/postgresql/: init-databases.sh
docker/sabredav/: Dockerfile  composer.json  init-database.sh  sabredav.conf  server.php
docker/sabredav/sql/: pgsql.calendars.sql
docs/: PR_SPLIT_PLAN.md  architecture.md  entitlements.md  invitations.md  organizations.md  recurrence.md  resources.md
env.d/development/: backend.defaults  caldav.defaults  davical.defaults  frontend.defaults  keycloak.defaults  postgresql.defaults  postgresql.e2e
openspec/: project.md
src/backend/: .dockerignore  Dockerfile  MANIFEST.in  entrypoint  gunicorn.conf.py  manage.py  pyproject.toml
src/backend/calendars/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
src/backend/calendars/configuration/theme/: default.json
src/backend/core/: admin.py  apps.py  factories.py  models.py  signals.py  urls.py
src/backend/core/api/: __init__.py  permissions.py  serializers.py  viewsets.py  viewsets_caldav.py  viewsets_ical.py  viewsets_rsvp.py
src/backend/core/authentication/: __init__.py  backends.py  views.py
src/backend/core/entitlements/: __init__.py
src/backend/core/entitlements/backends/: base.py  deploycenter.py  local.py
src/backend/core/external_api/: permissions.py  viewsets.py
src/backend/core/migrations/: 0001_initial.py  0002_calendarsubscriptiontoken.py  0003_calendarsubscriptiontoken_token_active_idx.py  0004_remove_calendarshare_calendar_and_more.py  0005_organization_user_organization.py  0006_remove_user_short_name_alter_user_email.py
src/backend/core/services/: caldav_service.py  calendar_invitation_service.py  import_service.py  resource_service.py  translation_service.py
src/backend/core/templates/emails/: calendar_invitation.html  calendar_invitation.txt  calendar_invitation_cancel.html  calendar_invitation_cancel.txt  calendar_invitation_reply.html  calendar_invitation_reply.txt  calendar_invitation_update.html  calendar_invitation_update.txt
src/backend/core/templates/rsvp/: response.html
src/backend/core/templatetags/: extra_tags.py
src/backend/core/tests/: conftest.py  test_api_config.py  test_api_users.py  test_caldav_proxy.py  test_caldav_scheduling.py  test_caldav_service.py  test_calendar_invitation_service.py  test_calendar_subscription_api.py  test_entitlements.py  test_ical_export.py  test_import_events.py  test_models_users.py  test_organizations.py  test_permissions_security.py  test_resources.py  test_rsvp.py  test_settings.py  test_signals.py  test_translation_service.py
src/backend/core/tests/authentication/: test_backends.py  test_views.py
src/backend/core/tests/utils/: urls.py
src/backend/locale/de_DE/LC_MESSAGES/: django.po
src/backend/locale/en_US/LC_MESSAGES/: django.po
src/backend/locale/fr_FR/LC_MESSAGES/: django.po
src/backend/locale/nl_NL/LC_MESSAGES/: django.po
src/caldav/: init-database.sh  php-fpm.conf  server.php
src/caldav/sql/: pgsql.calendars.sql  (+2 more)
src/frontend/: .dockerignore  .npmrc  Caddyfile  Dockerfile  Dockerfile.caddy  Dockerfile.nginx  package.json  pnpm-lock.yaml
src/nginx/: servers.conf.erb
src/proxy/: Caddyfile
(+187 files in other folders)
